discussion/kv_engine/184396/184396_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add CDC Magma API to MagmaMemoryTrackingProxy

Change-Id: Idf2bf082c3ecb78b93e393c1d6b796b598e3b80b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:42:55.000000000
Message: 
Uploaded patch set 6: New patch set was added with same tree, parent, and commit message as Patch Set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 15:43:10.000000000
Message: 
Patch Set 6: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332652/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 15:57:56.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/812/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28: error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.MinValueSize =
                           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/812/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/812/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/991/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(560): error C2039: "MinValueSize": is not a member of "magma::Magma::Config" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/991/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/783/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/783/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/783/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1100/ : FAILURE

Compile error at [2023-01-16T15:47:41.011Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1100/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/818/ : FAILURE

Compile error at [2023-01-16T15:51:46.970Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/818/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/823/ : FAILURE

Compile error at [2023-01-16T15:53:12.671Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/823/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/824/ : FAILURE

Compile error at [2023-01-16T15:52:59.652Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/824/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/832/ : FAILURE

Compile error at [2023-01-16T15:47:14.777Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/832/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/804/ : FAILURE

Compile error at [2023-01-16T15:54:36.982Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/804/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/833/ : FAILURE

Compile error at [2023-01-16T15:57:20.773Z] ../kv_engine/engines/ep/tests/module_tests/history_scan_test.cc:41:22:
error: ?MockMagmaKVStore? does not name a type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/833/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22192/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
